# bewerkdemarkten-api

./: .dockerignore  .gitignore  .rancher-pipeline.yml  Cargo.toml  Dockerfile  Dockerfile.diesel  README.md  deployment.yaml
migrations/2020-12-29-211004_create_markets/: down.sql  up.sql
migrations/2020-12-30-100216_create_afwijzing/: down.sql  up.sql
migrations/2020-12-30-100512_create_allocation/: down.sql  up.sql
migrations/2020-12-30-100652_create_log/: down.sql  up.sql
migrations/2020-12-30-100830_create_plaatsvoorkeur/: down.sql  up.sql
migrations/2020-12-30-100933_create_rsvp/: down.sql  up.sql
migrations/2020-12-30-101034_create_session/: down.sql  up.sql
migrations/2020-12-30-101139_create_voorkeur/: down.sql  up.sql
src/: connection.rs  git.rs  lib.rs  main.rs  models.rs  schema.rs
src/announcement/: mod.rs
src/branche/: mod.rs
src/crud/: mod.rs
src/day/: mod.rs
src/generic/: mod.rs  models.rs  v1.rs
src/jsonreaders/: mod.rs
src/market/: mod.rs  models.rs  v1.rs  v2.rs
src/models/: generic.rs  mod.rs  v1.rs  v2.rs
src/obstacle/: mod.rs
src/properties/: mod.rs
