[package]
name = "bewerkdemarkten-api"
version = "0.1.3"
authors = ["Milo van der Linden <milo@tiltshift.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
git2 = "0.13.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
